@@ -365,8 +365,10 @@
 #define HD_GYRO			138
 #define COMP_GYRO		139
 #define COMPACT_HEAT_SINK	140
+#define AMMO_LRM_STINGER	141
+
 #ifdef BT_COMPLEXREPAIRS
-#define TON_SENSORS_FIRST       141
+#define TON_SENSORS_FIRST       142
 #define TON_SENSORS_LAST        (TON_SENSORS_FIRST + 9)
 
 #define TON_MYOMER_FIRST        (TON_SENSORS_LAST + 1)
@@ -633,10 +635,11 @@ struct critical_slot {
 #define AC_FLECHETTE_MODE	0x00004000	/* autocannon firing flechette rounds */
 #define AC_INCENDIARY_MODE	0x00008000	/* autocannon firing incendiary rounds */
 #define AC_PRECISION_MODE	0x00010000	/* autocannon firing precision rounds */
+#define STINGER_MODE            0x00020000      /* AntiAir LRM */
 
 #define ARTILLERY_MODES		(CLUSTER_MODE|MINE_MODE|SMOKE_MODE)
 #define INARC_MODES		(INARC_EXPLO_MODE|INARC_HAYWIRE_MODE|INARC_ECM_MODE|INARC_NEMESIS_MODE)
-#define MISSILE_MODES		(ARTEMIS_MODE|NARC_MODE|INFERNO_MODE|SWARM_MODE|SWARM1_MODE)
+#define MISSILE_MODES		(ARTEMIS_MODE|NARC_MODE|INFERNO_MODE|SWARM_MODE|SWARM1_MODE|STINGER_MODE)
 #define AC_MODES		(AC_AP_MODE|AC_FLECHETTE_MODE|AC_INCENDIARY_MODE|AC_PRECISION_MODE)
 #define AMMO_MODES		(LBX_MODE|AC_MODES|MISSILE_MODES|INARC_MODES|ARTILLERY_MODES)
 
